# cpp-from-template

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SBOM.md  conanfile.txt  setup.sh
.devcontainer/: Dockerfile  conansetup.sh
.github/workflows/: checks.yml
cmake/: README.md  cppcheck.cmake  dependencies.cmake  toolchain-cortexa7hf.cmake  version.cmake
docs/: CMakeLists.txt  folder-structure.md  install.md
docs/doxydoc/: CMakeLists.txt  doxygenMainPage.txt
examples/: README.md
lib/: .gitignore  CMakeLists.txt
lib/include/mylib/: foo.hpp
lib/src/: foo.cpp
submodules/: README.md
tests/: CMakeLists.txt  README.md  test_cases.cpp  test_main.cpp
